tests/errors/scalar_allocation_check_06.f90
program scalar_allocation_check_06
    implicit none

    integer, allocatable :: x

    print *, x
end
